Fix div id references in html template

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@ $GODOT_HEAD_INCLUDE
 
 		(function() {
 			const INDETERMINATE_STATUS_STEP_MS = 100;
-			var statusProgress = document.getElementById('status-progress');
-			var statusProgressInner = document.getElementById('status-progress-inner');
-			var statusIndeterminate = document.getElementById('status-indeterminate');
+			var statusProgress = document.getElementById('status-progressbar');
+			var statusProgressInner = document.getElementById('status-progressbar-inner');
+			var statusIndeterminate = document.getElementById('status-spinner');
 			var statusNotice = document.getElementById('status-notice');
 
 			var initializing = true;
