--- a/index.html
+++ b/index.html
@@ -109,15 +109,13 @@ $GODOT_HEAD_INCLUDE
     <div id="status-progressbar" style="display: block;">
       <div id="status-progressbar-inner"></div>
     </div>
-		</div>
 		<div id='status-notice' style='display: none;'></div>
 	</div>
 
 	<script type='text/javascript' src='$GODOT_URL'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		const GODOT_CONFIG = $GODOT_CONFIG;
-		var engine = new Engine(GODOT_CONFIG);
+		var engine = new Engine($GODOT_CONFIG);
 
 		(function() {
 			const INDETERMINATE_STATUS_STEP_MS = 100;
@@ -184,7 +182,7 @@ $GODOT_HEAD_INCLUDE
 								// wait for progress bar animation
 								setTimeout(() => {
 									setStatusMode('indeterminate');
-								}, 500);
+								}, 100);
 							}
 						} else {
 							setStatusMode('indeterminate');
